--- a/lttng-ust-generate/Cargo.toml
+++ b/lttng-ust-generate/Cargo.toml
@@ -2,10 +2,11 @@
 name = "lttng-ust-generate"
 version = "0.1.0"
 authors = ["Reed Koser <srkoser+GitHub@gmail.com>"]
-description = "Semi-automatically generate lttng-ust tracepoints"
+description = "Semi-automatically generate lttng-ust tracepoints (generation code)"
 categories = [ "external-ffi-bindings", "development-tools::ffi", "development-tools::tracing"]
 readme = "README.md"
 
 [dependencies]
 bindgen = "0.32.3"
 cc = "1.0"
+quote = "0.4.2"
