--- a/lttng-ust/Cargo.toml
+++ b/lttng-ust/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Reed Koser <srkoser+GitHub@gmail.com>"]
 description = "Semi-automatically generate lttng-ust tracepoints (client code)"
 categories = [ "external-ffi-bindings", "development-tools::ffi", "development-tools::tracing"]
 readme = "README.md"
+license = "MIT"
 repository = "https://github.com/bobtwinkles/lttng-ust-rs/"
 
 [dependencies]
