Switch to valid category slugs

--- a/lttng-ust-generate/Cargo.toml
+++ b/lttng-ust-generate/Cargo.toml
@@ -3,7 +3,7 @@ name = "lttng-ust-generate"
 version = "0.1.0"
 authors = ["Reed Koser <srkoser+GitHub@gmail.com>"]
 description = "Semi-automatically generate lttng-ust tracepoints (generation code)"
-categories = [ "external-ffi-bindings", "development-tools::ffi", "development-tools::tracing"]
+categories = [ "external-ffi-bindings", "development-tools::ffi", "development-tools::profiling"]
 readme = "README.md"
 license = "MIT"
 repository = "https://github.com/bobtwinkles/lttng-ust-rs/"
